force-app/main/default/objects/Checklist_Item__c/Checklist_Item__c.object-meta.xml
<CustomObject>
    <description>An individual line item on a checklist. May contain multiple steps.</description>
    <label>Checklist Item</label>
    <nameField>
        <displayFormat>CLI-{00000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>