force-app/main/default/objects/Checklist_Item__c/fields/AI_Analysis_Enabled__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis_Enabled__c</fullName>
    <label>AI Analysis Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether ops can trigger AI document analysis on this item.</description>
</CustomField>