force-app/main/default/objects/Checklist_Item__c/fields/AI_Analysis_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis_Status__c</fullName>
    <label>AI Analysis Status</label>
    <type>Picklist</type>
    <description>Status of AI document analysis for this item.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Run</fullName><default>true</default><label>Not Run</label></value>
            <value><fullName>Processing</fullName><default>false</default><label>Processing</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Needs Review</fullName><default>false</default><label>Needs Review</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>