force-app/main/default/objects/Checklist_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <description>Functional grouping for the item.</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Documentation</fullName><default>false</default><label>Documentation</label></value>
            <value><fullName>Identity Verification</fullName><default>false</default><label>Identity Verification</label></value>
            <value><fullName>Account Setup</fullName><default>false</default><label>Account Setup</label></value>
            <value><fullName>Integration</fullName><default>false</default><label>Integration</label></value>
            <value><fullName>Training</fullName><default>false</default><label>Training</label></value>
            <value><fullName>Compliance</fullName><default>false</default><label>Compliance</label></value>
            <value><fullName>Legal</fullName><default>false</default><label>Legal</label></value>
            <value><fullName>UAT</fullName><default>false</default><label>UAT</label></value>
            <value><fullName>Go-Live</fullName><default>false</default><label>Go-Live</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>