force-app/main/default/objects/Checklist_Item__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <label>Checklist</label>
    <type>MasterDetail</type>
    <referenceTo>Checklist__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Parent checklist.</description>
</CustomField>