force-app/main/default/objects/Checklist_Item__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
    <description>When the item was completed.</description>
</CustomField>