force-app/main/default/objects/Checklist_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Detailed description shown to the user.</description>
</CustomField>