force-app/main/default/objects/Checklist_Item__c/fields/Document_Count__c.field-meta.xml
<CustomField>
    <fullName>Document_Count__c</fullName>
    <label>Document Count</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of documents uploaded (max 2 per item).</description>
</CustomField>