force-app/main/default/objects/Checklist_Item__c/fields/Document_Generation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Document_Generation_Enabled__c</fullName>
    <label>Document Generation Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this item can generate a document to send for completion/signature.</description>
</CustomField>