force-app/main/default/objects/Checklist_Item__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
    <description>When this item is due. Reminders fire past this date with no buffer.</description>
</CustomField>