force-app/main/default/objects/Checklist_Item__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description>Internal-only procedure notes. Shown on the internal dashboard, hidden on Experience Cloud.</description>
</CustomField>