force-app/main/default/objects/Checklist_Item__c/fields/Last_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Date__c</fullName>
    <label>Last Reminder Date</label>
    <type>DateTime</type>
    <description>When the most recent reminder was sent.</description>
</CustomField>