force-app/main/default/objects/Checklist_Item__c/fields/Reminder_Channel__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Channel__c</fullName>
    <label>Reminder Channel</label>
    <type>Picklist</type>
    <description>Override channel for this item. Defaults to checklist preferred method.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>true</default><label>Email</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Slack</fullName><default>false</default><label>Slack</label></value>
            <value><fullName>Experience Cloud</fullName><default>false</default><label>Experience Cloud</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>