force-app/main/default/objects/Checklist_Item__c/fields/Reminder_Count__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Count__c</fullName>
    <label>Reminder Count</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of reminders sent. On the 3rd, the manager is escalated.</description>
</CustomField>