force-app/main/default/objects/Checklist_Item__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <label>Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this item is mandatory for checklist completion.</description>
</CustomField>