force-app/main/default/objects/Checklist_Item__c/fields/Requires_Document__c.field-meta.xml
<CustomField>
    <fullName>Requires_Document__c</fullName>
    <label>Requires Document Upload</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this item requires uploaded documents (max 2).</description>
</CustomField>