force-app/main/default/objects/Checklist_Item__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Display order of the item within the checklist.</description>
</CustomField>