force-app/main/default/objects/Checklist_Item__c/fields/Signature_Captured__c.field-meta.xml
<CustomField>
    <fullName>Signature_Captured__c</fullName>
    <label>Signature Captured</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether the required signature has been captured.</description>
</CustomField>