force-app/main/default/objects/Checklist_Item__c/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <label>Signature Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether a signature is required to complete this item.</description>
</CustomField>