force-app/main/default/objects/Checklist_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Awaiting Documents</fullName><default>false</default><label>Awaiting Documents</label></value>
            <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>Overdue</fullName><default>false</default><label>Overdue</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>