force-app/main/default/objects/Checklist_Item__c/fields/Steps_Complete__c.field-meta.xml
<CustomField>
    <fullName>Steps_Complete__c</fullName>
    <label>Steps Complete</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of completed steps in this item.</description>
</CustomField>