force-app/main/default/objects/Checklist_Item__c/fields/Steps_Total__c.field-meta.xml
<CustomField>
    <fullName>Steps_Total__c</fullName>
    <label>Steps Total</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total number of steps in this item.</description>
</CustomField>