force-app/main/default/objects/Checklist_Item__c/fields/Visible_In_Portal__c.field-meta.xml
<CustomField>
    <fullName>Visible_In_Portal__c</fullName>
    <label>Visible in Portal</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this item is shown to clients on the Experience Cloud portal.</description>
</CustomField>